tests/Unit/PHPStan/Rules/Fixtures/DisallowAnonymousFunction/Invalid/ArrowFunction.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\DisallowAnonymousFunction\Invalid;

$fn = fn (): string => 'arrow';
